[BI-1555] - bumping heap size for unit tests